clusters/homelab/apps/immich/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
  labels:
    app: immich-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
        - name: microservices
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: immich-library
              mountPath: /usr/src/app/upload
            - name: immich-config
              mountPath: /usr/src/app/config
      volumes:
        - name: immich-library
          persistentVolumeClaim:
            claimName: immich-library
        - name: immich-config
          configMap:
            name: immich-config
