clusters/homelab/apps/immich/machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: immich-machine-learning
              mountPath: /cache
            - name: immich-machine-learning
              mountPath: /model
      volumes:
        - name: immich-machine-learning
          persistentVolumeClaim:
            claimName: immich-machine-learning
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
