clusters/homelab/apps/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: "immich.app.pesulabs.net"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/proxy-body-size: "50G"
    traefik.ingress.kubernetes.io/redirect-regex: "^https://immich.app.pesulabs.net/api/server-info/(.*)$$"
    traefik.ingress.kubernetes.io/redirect-replacement: "https://immich.app.pesulabs.net/api/server/$${1}"
spec:
  tls:
  - hosts:
    - immich.app.pesulabs.net
    secretName: immich-tls
  rules:
  - host: immich.app.pesulabs.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-web
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 3001
